--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
       <meta name="description" content="">
       <meta name="author" content="">
       <!-- bootstrap css -->
-      <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+      <link rel="stylesheet" type="text/css" href="html/css/bootstrap.min.css">
       <!-- style css -->
-      <link rel="stylesheet" type="text/css" href="css/style.css">
+      <link rel="stylesheet" type="text/css" href="html/css/style.css">
       <!-- Responsive-->
-      <link rel="stylesheet" href="css/responsive.css">
+      <link rel="stylesheet" href="html/css/responsive.css">
       <!-- fevicon -->
       <link rel="icon" href="images/fevicon.png" type="image/gif" />
       <!-- font css -->
       <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
       <!-- Scrollbar Custom CSS -->
-      <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+      <link rel="stylesheet" href="html/css/jquery.mCustomScrollbar.min.css">
       <!-- Tweaks for older IEs-->
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
    </head>
@@ -32,7 +32,7 @@
       <div class="header_section">
          <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-               <adsfsd class="navbar-brand"href="index.html" aria-label="Read more about Seminole tax hike"><img src="images/logo.webp" alt = "ewgewgew"></adsfsd>
+               <adsfsd class="navbar-brand"href="index.html" aria-label="Read more about Seminole tax hike"><img src="html/images/logo.webp" alt = "ewgewgew"></adsfsd>
                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
                </button>
@@ -76,7 +76,7 @@
                      <div class="carousel-item active">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="images/banner-img.webp" alt = "ewgewgew"></div>
+                              <div class="banner_img"><img src="html/images/banner-img.webp" alt = "ewgewgew"></div>
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
@@ -94,7 +94,7 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="images/banner-img.webp" alt = "ewgewgew"></div>
+                              <div class="banner_img"><img src="html/images/banner-img.webp" alt = "ewgewgew"></div>
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
@@ -112,7 +112,7 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="images/banner-img.webp" alt = "ewgewgew"></div>
+                              <div class="banner_img"><img src="html/images/banner-img.webp" alt = "ewgewgew"></div>
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
@@ -145,7 +145,7 @@
          <div class="container">
             <div class="row">
                <h1 class="coffee_taital">OUR Coffee OFFER</h1>
-               <div class="bulit_icon"><img src="images/bulit-icon.webp" alt = "ewgewgew"></div>
+               <div class="bulit_icon"><img src="html/images/bulit-icon.webp" alt = "ewgewgew"></div>
             </div>
          </div>
          <div class="coffee_section_2">
@@ -155,25 +155,25 @@
                      <div class="container-fluid">
                         <div class="row">
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-1.webp" alt = "ewgewgew"></div>
+                              <div class="coffee_img"><img src="html/images/img-1.webp" alt = "ewgewgew"></div>
                               <h33 class="types_text">TYPES OF COFFEE</h33>
                               <p class="looking_text">looking at its layout. The point of</p>
                               <div class="read_bt"><adfh href="#">Read More</adfh></div>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-2.webp"  alt = "ewgewgew"></div>
+                              <div class="coffee_img"><img src="html/images/img-2.webp" alt = "ewgewgew"></div>
                               <h33 class="types_text">BEAN VARIETIES</h33>
                               <p class="looking_text">looking at its layout. The point of</p>
                               <div class="read_bt"><awraw href="#">Read More</awraw></div>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-3.webp" alt = "ewgewgew"></div>
+                              <div class="coffee_img"><img src="html/images/img-3.webp" alt = "ewgewgew"></div>
                               <h33 class="types_text">COFFEE & PASTRY</h33>
                               <p class="looking_text">looking at its layout. The point of</p>
                               <div class="read_bt"><afdh href="#">Read More</afdh></div>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-4.webp" alt = "ewgewgew"></div>
+                              <div class="coffee_img"><img src="html/images/img-4.webp" alt = "ewgewgew"></div>
                               <h33 class="types_text">COFFEE TO GO</h33>
                               <p class="looking_text">looking at its layout. The point of</p>
                               <div class="read_bt"><awrhwr href="#">Read More</awrhwr></div>
@@ -185,25 +185,25 @@
                      <div class="container-fluid">
                         <div class="row">
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-1.webp" alt = "ewgewgew"></div>
+                              <div class="coffee_img"><img src="html/images/img-1.webp" alt = "ewgewgew"></div>
                               <h33 class="types_text">TYPES OF COFFEE</h33>
                               <p class="looking_text">looking at its layout. The point of</p>
                               <div class="read_bt"><ahwrhw href="#">Read More</ahwrhw></div>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-2.webp" alt = "ewgewgew"></div>
+                              <div class="coffee_img"><img src="html/images/img-2.webp" alt = "ewgewgew"></div>
                               <h33 class="types_text">BEAN VARIETIES</h33>
                               <p class="looking_text">looking at its layout. The point of</p>
                               <div class="read_bt"><ahwrhw href="#">Read More</ahwrhw></div>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-3.webp" alt = "ewgewgew"></div>
+                              <div class="coffee_img"><img src="html/images/img-3.webp" alt = "ewgewgew"></div>
                               <h33 class="types_text">COFFEE & PASTRY</h33>
                               <p class="looking_text">looking at its layout. The point of</p>
                               <div class="read_bt"><ahwrhw href="#">Read More</ahwrhw></div>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-4.webp" alt = "ewgewgew"></div>
+                              <div class="coffee_img"><img src="html/images/img-4.webp" alt = "ewgewgew"></div>
                               <h33 class="types_text">COFFEE TO GO</h33>
                               <p class="looking_text">looking at its layout. The point of</p>
                               <div class="read_bt"><arw href="#">Read More</arw></div>
@@ -215,25 +215,25 @@
                      <div class="container-fluid">
                         <div class="row">
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-1.webp" alt = "ewgewgew"></div>
+                              <div class="coffee_img"><img src="html/images/img-1.webp" alt = "ewgewgew"></div>
                               <h33 class="types_text">TYPES OF COFFEE</h33>
                               <p class="looking_text">looking at its layout. The point of</p>
                               <div class="read_bt"><arwhw href="#">Read More</arwhw></div>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-2.webp" alt = "ewgewgew"></div>
+                              <div class="coffee_img"><img src="html/images/img-2.webp" alt = "ewgewgew"></div>
                               <h33 class="types_text">BEAN VARIETIES</h33>
                               <p class="looking_text">looking at its layout. The point of</p>
                               <div class="read_bt"><awrhw href="#">Read More</awrhw></div>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-3.webp" alt = "ewgewgew"></div>
+                              <div class="coffee_img"><img src="html/images/img-3.webp" alt = "ewgewgew"></div>
                               <h33 class="types_text">COFFEE & PASTRY</h33>
                               <p class="looking_text">looking at its layout. The point of</p>
                               <div class="read_bt"><ahwrhw href="#">Read More</ahwrhw></div>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="images/img-4.webp" alt = "ewgewgew"></div>
+                              <div class="coffee_img"><img src="html/images/img-4.webp" alt = "ewgewgew"></div>
                               <h33 class="types_text">COFFEE TO GO</h33>
                               <p class="looking_text">looking at its layout. The point of</p>
                               <div class="read_bt"><arwh href="#">Read More</arwh></div>
@@ -258,11 +258,11 @@
             <div class="row">
                <div class="col-md-12">
                   <h1 class="about_taital">About Our shop</h1>
-                  <div class="bulit_icon"><img src="images/bulit-icon.webp" alt = "ewgewgew"></div>
+                  <div class="bulit_icon"><img src="html/images/bulit-icon.webp" alt = "ewgewgew"></div>
                </div>
             </div>
             <div class="about_section_2 layout_padding">
-               <div class="image_iman"><img src="images/about-img.webp" class="about_img" alt = "ewgewgew"></div>
+               <div class="image_iman"><img src="html/images/about-img.webp" class="about_img" alt = "ewgewgew"></div>
                <div class="about_taital_box">
                   <h1 class="about_taital_1">Coffee distribution '</h1>
                   <p class=" about_text">has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editorhas a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editor</p>
@@ -278,13 +278,13 @@
             <div class="row">
                <div class="col-md-12">
                   <h1 class="about_taital">What syas customers</h1>
-                  <div class="bulit_icon"><img src="images/bulit-icon.webp" alt = "ewgewgew"></div>
+                  <div class="bulit_icon"><img src="html/images/bulit-icon.webp" alt = "ewgewgew"></div>
                </div>
             </div>
             <div class="client_section_2">
                <div class="client_taital_main">
                   <div class="client_left">
-                     <div class="client_img"><img src="images/client-img1.png" alt = "ewgewgew"></div>
+                     <div class="client_img"><img src="html/images/client-img1.png" alt = "ewgewgew"></div>
                   </div>
                   <div class="client_right">
                      <h33 class="moark_text">Joy Moark</h33>
@@ -293,7 +293,7 @@
                </div>
                <div class="client_taital_main">
                   <div class="client_left">
-                     <div class="client_img"><img src="images/client-img2.png" alt = "ewgewgew"></div>
+                     <div class="client_img"><img src="html/images/client-img2.png" alt = "ewgewgew"></div>
                   </div>
                   <div class="client_right">
                      <h33 class="moark_text">Mihacal</h33>
@@ -302,7 +302,7 @@
                </div>
                <div class="client_taital_main">
                   <div class="client_left">
-                     <div class="client_img"><img src="images/client-img3.png" alt = "ewgewgew"></div>
+                     <div class="client_img"><img src="html/images/client-img3.png" alt = "ewgewgew"></div>
                   </div>
                   <div class="client_right">
                      <h33 class="moark_text">Uliya den</h33>
@@ -319,14 +319,14 @@
             <div class="row">
                <div class="col-md-12">
                   <h1 class="about_taital">Our Blog</h1>
-                  <div class="bulit_icon"><img src="images/bulit-icon.webp" alt = "ewgewgew"></div>
+                  <div class="bulit_icon"><img src="html/images/bulit-icon.webp" alt = "ewgewgew"></div>
                </div>
             </div>
             <div class="blog_section_2">
                <div class="row">
                   <div class="col-md-6">
                      <div class="blog_box">
-                        <div class="blog_img"><img src="images/blog-img1.webp" alt = "ewgewgew"></div>
+                        <div class="blog_img"><img src="html/images/blog-img1.webp" alt = "ewgewgew"></div>
                         <h44 class="date_text">05 April</h44>
                         <h44 class="prep_text">PREP TECHNIQUES Coffee</h44>
                         <p class="lorem_text">distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a moredistracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more</p>
@@ -335,7 +335,7 @@
                   </div>
                   <div class="col-md-6">
                      <div class="blog_box">
-                        <div class="blog_img"><img src="images/blog-img2.webp" alt = "ewgewgew"></div>
+                        <div class="blog_img"><img src="html/images/blog-img2.webp" alt = "ewgewgew"></div>
                         <h44 class="date_text">05 April</h44>
                         <h44 class="prep_text">PREP TECHNIQUES Coffee</h44>
                         <p class="lorem_text">distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a moredistracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more</p>
@@ -353,7 +353,7 @@
             <div class="row">
                <div class="col-sm-12">
                   <h1 class="contact_taital">Get In Touch</h1>
-                  <div class="bulit_icon"><img src="images/bulit-icon.webp" alt = "ewgewgew"></div>
+                  <div class="bulit_icon"><img src="html/images/bulit-icon.webp" alt = "ewgewgew"></div>
                </div>
             </div>
          </div>
@@ -402,7 +402,7 @@
                   </div>
                   <div class="form-group">
                      <textarea class="update_mail" placeholder="Your Email" rows="5" id="comment" name="Your Email"></textarea>
-                     <div class="subscribe_bt"><a4yhawh href="#"><img src="images/teligram-icon.webp" alt = "ewgewgew"></a4yhawh></div>
+                     <div class="subscribe_bt"><a4yhawh href="#"><img src="html/images/teligram-icon.webp" alt = "ewgewgew"></a4yhawh></div>
                   </div>
                </div>
             </div>
@@ -431,13 +431,13 @@
       </div>
       <!-- copyright section end -->
       <!-- Javascript files-->
-      <script src="js/jquery.min.js"></script>
-      <script src="js/popper.min.js"></script>
-      <script src="js/bootstrap.bundle.min.js"></script>
-      <script src="js/jquery-3.0.0.min.js"></script>
-      <script src="js/plugin.js"></script>
+      <script src="html/js/jquery.min.js"></script>
+      <script src="html/js/popper.min.js"></script>
+      <script src="html/js/bootstrap.bundle.min.js"></script>
+      <script src="html/js/jquery-3.0.0.min.js"></script>
+      <script src="html/js/plugin.js"></script>
       <!-- sidebar -->
-      <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-      <script src="js/custom.js"></script>
+      <script src="html/js/jquery.mCustomScrollbar.concat.min.js"></script>
+      <script src="html/js/custom.js"></script>
    </body>
 </html>
